err/iosstickersextension.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IOSStickersExtension'...
Compiling './lib/python3.5/site-packages/IOSStickersExtension/IOSStickersExtension.py'...
***   File "./lib/python3.5/site-packages/IOSStickersExtension/IOSStickersExtension.py", line 77
    print 'Failed to run command: ' + ' '.join(convert_plist_to_xml_cmd)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/IOSStickersExtension/resources'...
Listing './lib/python3.5/site-packages/IOSStickersExtension/resources/example.sticker'...
Listing './lib/python3.5/site-packages/IOSStickersExtension/resources/tt-stickers'...
Listing './lib/python3.5/site-packages/IOSStickersExtension/resources/tt-stickers/TT-Stickers.xcassets'...
Listing './lib/python3.5/site-packages/IOSStickersExtension/resources/tt-stickers/TT-Stickers.xcassets/Sticker Pack.stickerpack'...
Listing './lib/python3.5/site-packages/IOSStickersExtension/resources/tt-stickers/TT-Stickers.xcassets/iMessage App Icon.stickersiconset'...
Listing './lib/python3.5/site-packages/IOSStickersExtension-1.7.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
